added google anlytics

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ linkedin_username: ktakanov
 author: Kevin K. Takano
 background: "/img/banner_home4.jpg"
 
-# google_analytics: UA-142700185-1
+google_analytics: UA-175597997-1
 
 # Build settings
 #theme: minima
